feat: unify problem details handling (#39)
* feat: unify problem details handling

* docs: update docs
