# studio-app/src/main/resources/static/openapi/studio-api.yaml
@@ -86,6 +86,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DocumentResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
         '404':
           $ref: '#/components/responses/DocumentNotFound'
     delete:
@@ -98,6 +100,8 @@ paths:
       responses:
         '204':
           description: The document session was closed.
+        '400':
+          $ref: '#/components/responses/BadRequest'
         '404':
           $ref: '#/components/responses/DocumentNotFound'
         '412':
@@ -158,6 +162,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ValidationResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
         '404':
           $ref: '#/components/responses/DocumentNotFound'
   /api/v1/documents/{documentId}/exports:
